Сделал: Герой, преимущества, чем мы занимаемся

--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,30 +1,75 @@
 .hero-title {
-  @include font($fs: 44px, $fw: 900, $ls: 0.06em);
+  @include font($fs: 26px, $fw: 900, $ls: 0.06em);
 
-  line-height: 1.364;
+  line-height: 1.615;
   text-transform: uppercase;
   color: $white-color;
   margin-bottom: 30px;
-}
-
-.hero-container {
-  max-width: 695px;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
+  padding: 0 15px;
 }
 
 .hero {
-  max-width: 1600px;
-  height: 600px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  max-width: 480px;
+  padding: 118px 0;
+  margin: 0 auto;
+  text-align: center;
   background-color: $background-main;
-  background-image: linear-gradient($background-main, $background-main),
-    url(../img/hero/hero-background.jpg);
+  background-image: url("../img/hero/hero-bcg-tel.jpg");
+  // background-image: url("../img/hero/hero-bcg-tel.webp");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+}
+
+@media screen and (min-devise-pixel-ratio: 2),
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../img/hero/hero-bcg-tel@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    background-image: url("../img/hero/hero-bcg-tab.jpg");
+  }
+
+  .hero-title {
+    padding: 0 186px;
+  }
+
+  @media screen and (min-devise-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero {
+      background-image: url("../img/hero/hero-bcg-tab@2x.jpg");
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    padding: 200px 0;
+    background-image: url("../img/hero/hero-background.jpg");
+  }
+
+  .hero-title {
+    padding: 0 266px;
+  }
+
+  .hero-title {
+    @include font($fs: 44px, $fw: 900, $ls: 0.06em);
+
+    line-height: 1.364;
+  }
+
+  @media screen and (min-devise-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    .hero {
+      background-image: url("../img/hero/hero-background@2x.jpg");
+    }
+  }
 }
