--- a/css/main.css
+++ b/css/main.css
@@ -37,10 +37,12 @@ ol {
 
 img {
   display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #757575;
 }
 
@@ -57,19 +59,27 @@ body {
 }
 
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  /* outline: 2px solid red; */
+  width: 100%;
+  padding: 0 15px;
 }
 
-.container .basement-logo {
-  display: inline-block;
-  margin-right: 0px;
-  margin-bottom: 20px;
-  color: #ffffff;
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .title-for-two-blocks {
@@ -105,7 +115,7 @@ body {
   font-size: 16px;
   font-weight: 700;
   letter-spacing: 0.06em;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.875;
   letter-spacing: 0.06em;
   color: #ffffff;
@@ -134,17 +144,13 @@ body {
   background: #f5f4fa;
   color: #212121;
   padding: 6px 22px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-btn:hover,
-.portfolio-btn:focus {
+.portfolio-btn:hover, .portfolio-btn:focus {
   color: #ffffff;
   background-color: #2196f3;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-btn-item {
@@ -193,7 +199,7 @@ body {
   font-size: 16px;
   font-weight: 700;
   letter-spacing: 0.06em;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 30px;
   color: #ffffff;
   padding: 10px 55px;
@@ -205,8 +211,7 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-btn:hover,
-.form-btn:focus {
+.form-btn:hover, .form-btn:focus {
   background-color: #188ce8;
 }
 
@@ -252,13 +257,10 @@ body {
   border-radius: 50%;
   color: #afb1b8;
   fill: currentColor;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-list-link:hover,
-.social-list-link:focus {
+.social-list-link:hover, .social-list-link:focus {
   background-color: #2196f3;
 }
 
@@ -295,8 +297,7 @@ body {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.join-us-link:hover,
-.join-us-link:focus {
+.join-us-link:hover, .join-us-link:focus {
   background-color: #2196f3;
 }
 
@@ -309,8 +310,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav-link:hover,
-.site-nav-link:focus {
+.site-nav-link:hover, .site-nav-link:focus {
   color: #2196f3;
 }
 
@@ -341,7 +341,7 @@ body {
   position: absolute;
   left: 0;
   bottom: 0;
-  content: '';
+  content: "";
   width: 100%;
   height: 4px;
   background: #2196f3;
@@ -394,8 +394,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contacts-link:hover,
-.contacts-link:focus {
+.contacts-link:hover, .contacts-link:focus {
   color: #2196f3;
 }
 
@@ -418,38 +417,106 @@ body {
 }
 
 .hero-title {
-  font-size: 44px;
+  font-size: 26px;
   font-weight: 900;
   letter-spacing: 0.06em;
-  line-height: 1.364;
+  line-height: 1.615;
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 30px;
-}
-
-.hero-container {
-  max-width: 695px;
-  margin-right: auto;
-  margin-left: auto;
-  text-align: center;
+  padding: 0 15px;
 }
 
 .hero {
-  max-width: 1600px;
-  height: 600px;
-  margin-right: auto;
-  margin-left: auto;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  max-width: 480px;
+  padding: 118px 0;
+  margin: 0 auto;
+  text-align: center;
   background-color: rgba(47, 48, 58, 0.4);
-  background-image: linear-gradient(
-      rgba(47, 48, 58, 0.4),
-      rgba(47, 48, 58, 0.4)
-    ),
-    url(../img/hero/hero-background.jpg);
+  background-image: url("../img/hero/hero-bcg-tel.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
+}
+
+@media screen and (min-devise-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../img/hero/hero-bcg-tel@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+    background-image: url("../img/hero/hero-bcg-tab.jpg");
+  }
+  .hero-title {
+    padding: 0 186px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-devise-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../img/hero/hero-bcg-tab@2x.jpg");
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    padding: 200px 0;
+    background-image: url("../img/hero/hero-background.jpg");
+  }
+  .hero-title {
+    padding: 0 266px;
+  }
+  .hero-title {
+    font-size: 44px;
+    font-weight: 900;
+    letter-spacing: 0.06em;
+    line-height: 1.364;
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-devise-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: url("../img/hero/hero-background@2x.jpg");
+  }
+}
+
+.features {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.features-list {
+  max-width: 100%;
+  max-width: 480px;
+}
+
+.features-list-item {
+  max-width: 100%;
+}
+
+@media screen and (max-width: 767px) {
+  .features-list-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+.features-list-icon {
+  content: "";
+  height: 120px;
+  max-width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  margin-bottom: 30px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #f5f4fa;
 }
 
 .features-title {
@@ -460,6 +527,7 @@ body {
   text-transform: uppercase;
   color: #212121;
   margin-bottom: 10px;
+  text-align: center;
 }
 
 .features-text {
@@ -469,79 +537,87 @@ body {
   line-height: 1.714;
 }
 
-.features-list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .features-list {
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 100%;
+  }
+  .features-title {
+    text-align: left;
+  }
 }
 
-.features-list-item {
-  width: 270px;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .features-list-item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 30px) / 2);
+  }
+  .features-list-item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .features-list-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
 }
 
-.features-list-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (min-width: 1200px) {
+  .features-list-icon {
+    height: 120px;
+  }
+  .features-list-item {
+    width: 270px;
+  }
+  .features-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
-.tumb {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  content: '';
-  height: 120px;
-  width: 270px;
-  border-radius: 4px;
-  margin-bottom: 30px;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: #f5f4fa;
+@media screen and (max-width: 1199px) {
+  .what-we-do {
+    display: none;
+  }
 }
 
-.features {
-  padding-top: 95px;
-  padding-bottom: 95px;
-}
-
-.what-we-do-list {
-  display: flex;
-  position: relative;
-  z-index: -1;
-}
-
-.what-we-do-item {
-  position: relative;
-  width: 370px;
-}
-
-.what-we-do-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.what-we-do {
-  padding-bottom: 95px;
-}
-
-.recital-foto {
-  justify-content: center;
-  align-self: center;
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-  letter-spacing: 0.03em;
-  line-height: 1.143;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-.description-what-we-do {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  width: 100%;
-  height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
+@media screen and (min-width: 1200px) {
+  .what-we-do-list {
+    display: flex;
+    position: relative;
+    z-index: -1;
+  }
+  .what-we-do-item {
+    position: relative;
+    width: 370px;
+  }
+  .what-we-do-item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .what-we-do {
+    padding-bottom: 95px;
+  }
+  .recital-foto {
+    justify-content: center;
+    align-self: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 14px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    line-height: 1.143;
+    text-transform: uppercase;
+    color: #ffffff;
+  }
+  .description-what-we-do {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+  }
 }
 
 .our-team-title {
@@ -575,8 +651,7 @@ body {
 .our-team-item {
   width: 270px;
   background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -618,13 +693,10 @@ body {
   border-radius: 4px;
   color: #afb1b8;
   fill: currentColor;
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.regular-list-link:hover,
-.regular-list-link:focus {
+.regular-list-link:hover, .regular-list-link:focus {
   border-color: #2196f3;
 }
 
@@ -642,7 +714,7 @@ body {
   font-weight: 400;
   letter-spacing: 0.03em;
   line-height: 1.714;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: #ffffff;
   margin-bottom: 9px;
 }
@@ -656,8 +728,7 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.basement-contacts-link:hover,
-.basement-contacts-link:focus {
+.basement-contacts-link:hover, .basement-contacts-link:focus {
   color: #2196f3;
 }
 
@@ -690,7 +761,7 @@ body {
   font-weight: 700;
   letter-spacing: 0.03em;
   line-height: 1.143;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
@@ -701,7 +772,7 @@ body {
   align-items: baseline;
   flex-direction: column;
   width: 570px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.03em;
@@ -735,7 +806,7 @@ body {
 }
 
 .form-input {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 400;
   letter-spacing: 0.03em;
@@ -804,10 +875,8 @@ body {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.work-examples-link:hover,
-.work-examples-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+.work-examples-link:hover, .work-examples-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .tehnocrack-card {
@@ -816,7 +885,7 @@ body {
 }
 
 .tehnocrack-text {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   margin: 0;
   font-size: 18px;
   font-weight: 400;
@@ -857,8 +926,7 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -872,8 +940,7 @@ body {
   margin-right: auto;
   margin-left: auto;
   background-color: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 }
 
@@ -944,7 +1011,7 @@ body {
   font-size: 12px;
   font-weight: 400;
   letter-spacing: 0.01em;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1.167;
   color: #757575;
   margin-bottom: 4px;
@@ -962,7 +1029,7 @@ body {
 }
 
 .form-field textarea::placeholder {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.143;
@@ -986,7 +1053,7 @@ body {
   top: 50%;
   left: 8px;
   transform: translateY(-50%);
-  content: '';
+  content: "";
   display: inline-block;
   width: 16px;
   height: 15px;
