--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,15 +1,26 @@
 .container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-right: auto;
-  margin-left: auto;
-  /* outline: 2px solid red; */
+  width: 100%;
+  padding: 0 15px;
+  // outline: 1px solid red;
 
-  & .basement-logo {
-    display: inline-block;
-    margin-right: 0px;
-    margin-bottom: 20px;
-    color: $white-color;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
   }
 }
+
+//   & .basement-logo {
+//     display: inline-block;
+//     margin-right: 0px;
+//     margin-bottom: 20px;
+//     color: $white-color;
+//   }
+// }
