--- a/sass/layout/_what-we-do.scss
+++ b/sass/layout/_what-we-do.scss
@@ -1,43 +1,51 @@
-.what-we-do-list {
-  display: flex;
-  position: relative;
-  z-index: -1;
-}
-
-.what-we-do-item {
-  position: relative;
-  width: 370px;
-
-  &:not(:last-child) {
-    margin-right: 30px;
+@media screen and (max-width: 1199px) {
+  .what-we-do {
+    display: none;
   }
 }
 
-.what-we-do {
-  padding-bottom: 95px;
-}
+@media screen and (min-width: 1200px) {
+  .what-we-do-list {
+    display: flex;
+    position: relative;
+    z-index: -1;
+  }
 
-.recital-foto {
-  justify-content: center;
-  align-self: center;
-  font-family: $text-font;
+  .what-we-do-item {
+    position: relative;
+    width: 370px;
 
-  @include font($fw: 700);
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 
-  line-height: 1.143;
-  text-transform: uppercase;
-  color: $white-color;
-}
+  .what-we-do {
+    padding-bottom: 95px;
+  }
 
-.description-what-we-do {
-  position: absolute;
-  left: 0;
-  bottom: 0;
+  .recital-foto {
+    justify-content: center;
+    align-self: center;
+    font-family: $text-font;
 
-  display: flex;
-  justify-content: center;
-  align-self: center;
-  width: 100%;
-  height: 70px;
-  background-color: $what-we-do-background;
+    @include font($fw: 700);
+
+    line-height: 1.143;
+    text-transform: uppercase;
+    color: $white-color;
+  }
+
+  .description-what-we-do {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    width: 100%;
+    height: 70px;
+    background-color: $what-we-do-background;
+  }
 }
