--- a/css/main.css
+++ b/css/main.css
@@ -82,14 +82,40 @@ body {
   }
 }
 
+.container .basement-logo {
+  display: inline-block;
+  margin-right: 0px;
+  margin-bottom: 20px;
+  color: #ffffff;
+}
+
+@media screen and (max-width: 767px) {
+  .container .basement-logo {
+    display: flex;
+    justify-content: center;
+  }
+}
+
 .title-for-two-blocks {
-  font-size: 36px;
+  font-size: 28px;
   font-weight: 700;
   letter-spacing: 0.03em;
-  line-height: 1.167;
-  text-align: center;
+  line-height: 1.178;
   color: #212121;
-  margin-bottom: 50px;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 1200px) {
+  .title-for-two-blocks {
+    font-size: 36px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    line-height: 1.167;
+    text-align: center;
+    color: #212121;
+    margin-bottom: 50px;
+  }
 }
 
 .hero-btn {
@@ -128,6 +154,13 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: 0px;
+}
+
+@media screen and (max-width: 767px) {
+  .subscribe-btn-center {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .subscribe-icon {
@@ -217,12 +250,11 @@ body {
 
 .logo-main {
   font-family: Raleway;
+  font-size: 24px;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.192;
   letter-spacing: 0.03em;
+  line-height: 1.167;
   color: #000000;
-  margin-right: 95px;
 }
 
 .logo-portfolio {
@@ -233,9 +265,22 @@ body {
   color: #2196f3;
 }
 
+@media screen and (min-width: 1200px) {
+  .logo-main {
+    font-size: 26px;
+    font-weight: 700;
+    letter-spacing: 0.03em;
+    line-height: 1.192;
+  }
+}
+
 .social-list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+.social-list .social-list-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .social-list-icon {
@@ -433,7 +478,7 @@ body {
   margin: 0 auto;
   text-align: center;
   background-color: rgba(47, 48, 58, 0.4);
-  background-image: url("../img/hero/hero-bcg-tel.jpg");
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/hero-bcg-tel.jpg");
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
@@ -441,14 +486,14 @@ body {
 
 @media screen and (min-devise-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../img/hero/hero-bcg-tel@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/hero-bcg-tel@2x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    background-image: url("../img/hero/hero-bcg-tab.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/hero-bcg-tab.jpg");
   }
   .hero-title {
     padding: 0 186px;
@@ -457,7 +502,7 @@ body {
 
 @media screen and (min-width: 768px) and (min-devise-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../img/hero/hero-bcg-tab@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/hero-bcg-tab@2x.jpg");
   }
 }
 
@@ -465,7 +510,7 @@ body {
   .hero {
     max-width: 1600px;
     padding: 200px 0;
-    background-image: url("../img/hero/hero-background.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/hero-background.jpg");
   }
   .hero-title {
     padding: 0 266px;
@@ -480,7 +525,7 @@ body {
 
 @media screen and (min-width: 1200px) and (min-devise-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../img/hero/hero-background@2x.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/hero/hero-background@2x.jpg");
   }
 }
 
@@ -639,47 +684,73 @@ body {
 }
 
 .our-team {
-  padding: 95px 0;
+  padding: 60px 0;
   background-color: #f5f4fa;
 }
 
 .our-team-description {
-  text-align: center;
-  padding: 30px 30px;
+  padding: 30px 30px 24px;
+}
+
+.our-team-img {
+  width: 100%;
 }
 
 .our-team-item {
-  width: 270px;
+  text-align: center;
+  width: 100%;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
 
-.our-team-item:not(:last-child) {
-  margin-right: 30px;
+@media screen and (max-width: 1199px) {
+  .our-team-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
-.our-team-list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .our-team-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .our-team-item {
+    width: 357px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .our-team-item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 30px) / 2);
+  }
+  .our-team-item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .our-team-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team-description {
+    padding: 30px 32px;
+  }
+  .our-team-item {
+    width: 270px;
+  }
+  .our-team-item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .our-team-list {
+    align-items: flex-start;
+  }
 }
 
 .regular-clients {
-  padding: 95px 0;
-}
-
-.regular-list {
-  display: flex;
-}
-
-.regular-list-item {
-  display: flex;
-  justify-content: center;
-  width: 170px;
-  height: 90px;
-}
-
-.regular-list-item:not(:last-child) {
-  margin-right: 30px;
+  padding: 60px 0;
 }
 
 .regular-list-link {
@@ -709,6 +780,64 @@ body {
   fill: #2196f3;
 }
 
+.regular-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.regular-list-item {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  height: 90px;
+}
+
+@media screen and (max-width: 767px) {
+  .regular-list-item {
+    max-width: 210px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 30px) / 2);
+  }
+  .regular-list-item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .regular-list-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .regular-list-item {
+    max-width: 226px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 30px) / 3);
+  }
+  .regular-list-item:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .regular-list-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .regular-list-item {
+    width: 170px;
+  }
+  .regular-list-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.basement {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2f303a;
+}
+
 .address-text {
   font-size: 14px;
   font-weight: 400;
@@ -732,28 +861,8 @@ body {
   color: #2196f3;
 }
 
-.basement {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2f303a;
-}
-
 .basement-contacts-item:not(:last-child) {
   margin-bottom: 9px;
-}
-
-.blok-footer {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-}
-
-.first-blok-footer {
-  margin-right: 70px;
-}
-
-.join-us {
-  margin-right: 93px;
 }
 
 .join-us-text {
@@ -767,35 +876,13 @@ body {
   margin-bottom: 20px;
 }
 
-.subscribe {
-  display: flex;
-  align-items: baseline;
-  flex-direction: column;
-  width: 570px;
-  font-family: "Roboto", sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-  letter-spacing: 0.03em;
-  line-height: 1.143;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-
-.form-subscribe {
-  display: flex;
-}
-
-.subscribe-text {
-  margin-bottom: 20px;
-}
-
 .subscribe-form-field input {
   margin: 0;
   padding: 0;
-  width: 358px;
+  max-width: 450px;
+  width: 100%;
   max-height: 50px;
   padding: 15px 15px 15px;
-  margin-right: 12px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: #2f303a;
@@ -805,6 +892,21 @@ body {
   color: rgba(255, 255, 255, 0.6);
 }
 
+.subscribe-form-field {
+  margin-bottom: 20px;
+}
+
+.subscribe-text {
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.143;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+
 .form-input {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -812,6 +914,39 @@ body {
   letter-spacing: 0.03em;
   line-height: 1.25;
   color: #ffffff;
+}
+
+.blok-footer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.join-us {
+  margin-top: 60px;
+}
+
+.subscribe {
+  margin-top: 60px;
+}
+
+@media screen and (max-width: 767px) {
+  .basement-contacts-item {
+    display: flex;
+    justify-content: center;
+  }
+  .join-us-text {
+    display: flex;
+    justify-content: center;
+  }
+  .address-text {
+    display: flex;
+    justify-content: center;
+  }
+  .subscribe-text {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .section-portfolio {
