--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,9 @@
+.basement {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: $background-footer;
+}
+
 .address-text {
   @include font();
 
@@ -20,30 +26,10 @@
   }
 }
 
-.basement {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: $background-footer;
-}
-
 .basement-contacts-item {
   &:not(:last-child) {
     margin-bottom: 9px;
   }
-}
-
-.blok-footer {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-}
-
-.first-blok-footer {
-  margin-right: 70px;
-}
-
-.join-us {
-  margin-right: 93px;
 }
 
 .join-us-text {
@@ -56,35 +42,13 @@
   margin-bottom: 20px;
 }
 
-.subscribe {
-  display: flex;
-  align-items: baseline;
-  flex-direction: column;
-  width: 570px;
-  font-family: $text-font;
-
-  @include font($fw: 700);
-
-  line-height: 1.143;
-  text-transform: uppercase;
-  color: $white-color;
-}
-
-.form-subscribe {
-  display: flex;
-}
-
-.subscribe-text {
-  margin-bottom: 20px;
-}
-
 .subscribe-form-field input {
   margin: 0;
   padding: 0;
-  width: 358px;
+  max-width: 450px;
+  width: 100%;
   max-height: 50px;
   padding: 15px 15px 15px;
-  margin-right: 12px;
   border: $border-subscribe-form;
   border-radius: 4px;
   background-color: $background-footer;
@@ -94,6 +58,20 @@
   }
 }
 
+.subscribe-form-field {
+  margin-bottom: 20px;
+}
+
+.subscribe-text {
+  @include font($fw: 700);
+
+  font-family: $text-font;
+  line-height: 1.143;
+  text-transform: uppercase;
+  color: $white-color;
+  margin-bottom: 20px;
+}
+
 .form-input {
   font-family: $text-font;
   @include font($fs: 16px, $fw: 400);
@@ -101,3 +79,73 @@
   line-height: 1.25;
   color: $white-color;
 }
+
+.blok-footer {
+  display: flex;
+  flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  flex-wrap: wrap;
+}
+
+.join-us {
+  margin-top: 60px;
+  //   margin-right: 93px;
+}
+
+.subscribe {
+  margin-top: 60px;
+}
+
+@media screen and (max-width: 767px) {
+  .basement-contacts-item {
+    display: flex;
+    justify-content: center;
+  }
+
+  .join-us-text {
+    display: flex;
+    justify-content: center;
+  }
+
+  .address-text {
+    display: flex;
+    justify-content: center;
+  }
+
+  .subscribe-text {
+    display: flex;
+    justify-content: center;
+  }
+
+  // .subscribe-btn-center {
+  //   display: flex;
+  //   justify-content: center;
+  // }
+}
+
+// .blok-footer {
+//   display: flex;
+//   align-items: baseline;
+//   justify-content: space-between;
+// }
+
+// .first-blok-footer {
+//   margin-right: 70px;
+// }
+
+// .join-us {
+//   margin-right: 93px;
+// }
+
+// .subscribe {
+//   display: flex;
+//   align-items: baseline;
+//   flex-direction: column;
+//   width: 570px;
+
+// }
+
+// .form-subscribe {
+//   display: flex;
+// }
