--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -14,8 +14,12 @@
   margin: 0 auto;
   text-align: center;
   background-color: $background-main;
-  background-image: url("../img/hero/hero-bcg-tel.jpg");
-  // background-image: url("../img/hero/hero-bcg-tel.webp");
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url("../img/hero/hero-bcg-tel.jpg");
+
   background-repeat: no-repeat;
   background-position: 50% 50%;
   background-size: cover;
@@ -25,14 +29,22 @@
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
   .hero {
-    background-image: url("../img/hero/hero-bcg-tel@2x.jpg");
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../img/hero/hero-bcg-tel@2x.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
     max-width: 768px;
-    background-image: url("../img/hero/hero-bcg-tab.jpg");
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../img/hero/hero-bcg-tab.jpg");
   }
 
   .hero-title {
@@ -43,7 +55,11 @@
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero {
-      background-image: url("../img/hero/hero-bcg-tab@2x.jpg");
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../img/hero/hero-bcg-tab@2x.jpg");
     }
   }
 }
@@ -52,7 +68,11 @@
   .hero {
     max-width: 1600px;
     padding: 200px 0;
-    background-image: url("../img/hero/hero-background.jpg");
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url("../img/hero/hero-background.jpg");
   }
 
   .hero-title {
@@ -69,7 +89,11 @@
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero {
-      background-image: url("../img/hero/hero-background@2x.jpg");
+      background-image: linear-gradient(
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url("../img/hero/hero-background@2x.jpg");
     }
   }
 }
