--- a/sass/layout/_our-team.scss
+++ b/sass/layout/_our-team.scss
@@ -15,26 +15,75 @@
 }
 
 .our-team {
-  padding: 95px 0;
+  padding: 60px 0;
   background-color: $background-team;
 }
 
 .our-team-description {
-  text-align: center;
-  padding: 30px 30px;
+  padding: 30px 30px 24px;
+}
+
+.our-team-img {
+  width: 100%;
 }
 
 .our-team-item {
-  width: 270px;
+  text-align: center;
+  width: 100%;
   background-color: $white-color;
   box-shadow: $our-team-shadow;
   border-radius: 0px 0px 4px 4px;
 
-  &:not(:last-child) {
-    margin-right: 30px;
+  // outline: 1px solid red;
+
+  @media screen and (max-width: 1199px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
 }
 
-.our-team-list {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .our-team-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .our-team-item {
+    width: 357px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .our-team-item {
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 30px) / 2);
+
+    &:nth-child(2n) {
+      margin-right: 0px;
+    }
+
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .our-team-description {
+    padding: 30px 32px;
+  }
+
+  .our-team-item {
+    width: 270px;
+  }
+
+  .our-team-item:not(:last-child) {
+    margin-right: 30px;
+  }
+
+  .our-team-list {
+    align-items: flex-start;
+  }
 }
