--- a/sass/layout/_regular-clients.scss
+++ b/sass/layout/_regular-clients.scss
@@ -1,20 +1,5 @@
 .regular-clients {
-  padding: 95px 0;
-}
-
-.regular-list {
-  display: flex;
-}
-
-.regular-list-item {
-  display: flex;
-  justify-content: center;
-  width: 170px;
-  height: 90px;
-
-  &:not(:last-child) {
-    margin-right: 30px;
-  }
+  padding: 60px 0;
 }
 
 .regular-list-link {
@@ -44,5 +29,63 @@
   .regular-list-link:hover &,
   .regular-list-link:focus & {
     fill: $accent-color;
+  }
+}
+
+.regular-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.regular-list-item {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+
+  height: 90px;
+}
+
+@media screen and (max-width: 767px) {
+  .regular-list-item {
+    max-width: 210px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 30px) / 2);
+
+    &:nth-child(2n) {
+      margin-right: 0px;
+    }
+
+    &:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .regular-list-item {
+    max-width: 226px;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 30px) / 3);
+
+    &:nth-child(3n) {
+      margin-right: 0px;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .regular-list-item {
+    width: 170px;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
   }
 }
