--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -23,8 +23,9 @@
     color: $white-color;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     & .basement-logo {
+      // align-items: baseline;
       display: flex;
       justify-content: center;
     }
