--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -75,3 +75,10 @@
     background-color: $accent-color;
   }
 }
+
+@media screen and (min-width: 767px) and (max-width: 1199px) {
+  .join-us-list {
+    display: flex;
+    justify-content: left;
+  }
+}
