--- a/css/main.css
+++ b/css/main.css
@@ -61,6 +61,7 @@ body {
 .container {
   width: 100%;
   padding: 0 15px;
+  outline: 1px solid red;
 }
 
 @media screen and (min-width: 480px) {
@@ -187,13 +188,26 @@ body {
 }
 
 .portfolio-btn-item {
-  margin-bottom: 50px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .portfolio-btn-list:not(:last-child) {
   margin-right: 8px;
+}
+
+@media screen and (max-width: 767px) {
+  .portfolio-btn-list:nth-child(-n + 3) {
+    margin-bottom: 15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-btn-item {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .backdrop-btn {
@@ -1038,8 +1052,22 @@ body {
 }
 
 .section-portfolio {
-  padding-top: 95px;
-  padding-bottom: 95px;
+  padding-top: 60px;
+  padding-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .section-portfolio {
+    padding-top: 60px;
+    padding-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .section-portfolio {
+    padding-top: 95px;
+    padding-bottom: 50px;
+  }
 }
 
 .portfolio-border {
