--- a/sass/components/_portfolio-btn.scss
+++ b/sass/components/_portfolio-btn.scss
@@ -18,13 +18,27 @@
 }
 
 .portfolio-btn-item {
-  margin-bottom: 50px;
+  // margin-bottom: 50px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .portfolio-btn-list {
   &:not(:last-child) {
     margin-right: 8px;
+  }
+
+  @media screen and (max-width: 767px) {
+    &:nth-child(-n + 3) {
+      margin-bottom: 15px;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .portfolio-btn-item {
+    display: flex;
+    justify-content: center;
   }
 }
