--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,19 +1,20 @@
 .section-portfolio {
   padding-top: 60px;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
   .section-portfolio {
     padding-top: 60px;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .section-portfolio {
     padding-top: 95px;
-    padding-bottom: 50px;
+    padding-top: 95px;
+    margin-bottom: 50px;
   }
 }
 
