--- a/css/main.css
+++ b/css/main.css
@@ -190,6 +190,7 @@ body {
 .portfolio-btn-item {
   display: flex;
   justify-content: flex-start;
+  margin-bottom: 40px;
   flex-wrap: wrap;
 }
 
@@ -207,6 +208,13 @@ body {
   .portfolio-btn-item {
     display: flex;
     justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .portfolio-btn-item {
+    margin-bottom: 50px;
   }
 }
 
@@ -1053,20 +1061,21 @@ body {
 
 .section-portfolio {
   padding-top: 60px;
-  padding-bottom: 40px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
   .section-portfolio {
     padding-top: 60px;
-    padding-bottom: 30px;
+    padding-bottom: 60px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .section-portfolio {
     padding-top: 95px;
-    padding-bottom: 50px;
+    padding-top: 95px;
+    margin-bottom: 50px;
   }
 }
 
@@ -1091,50 +1100,6 @@ body {
   color: #757575;
 }
 
-.description-foto {
-  padding: 20px 25px;
-}
-
-.work-examples-item {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  width: calc((100% - 60px) / 3);
-  outline: 1px solid #eeeeee;
-}
-
-.work-examples-item:nth-child(3n) {
-  margin-right: 0px;
-}
-
-.work-examples-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-
-.work-examples-img {
-  width: 370px;
-  height: 294px;
-}
-
-.work-examples-list {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.work-examples-link {
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.work-examples-link:hover, .work-examples-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.tehnocrack-card {
-  position: relative;
-  overflow: hidden;
-}
-
 .tehnocrack-text {
   font-family: "Roboto", sans-serif;
   margin: 0;
@@ -1143,7 +1108,7 @@ body {
   letter-spacing: 0.03em;
   line-height: 1.556;
   color: #ffffff;
-  padding: 63px 24px;
+  padding: 77px 24px;
 }
 
 .tehnocrack {
@@ -1161,6 +1126,44 @@ body {
 .work-examples-link:hover .tehnocrack,
 .work-examples-link:focus .tehnocrack {
   transform: translateY(0);
+}
+
+.work-examples-link {
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-examples-link:hover, .work-examples-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+
+.work-examples-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.work-examples-item:not(:last-child) {
+  outline: 1px solid #eeeeee;
+}
+
+.tehnocrack-card {
+  position: relative;
+  overflow: hidden;
+  max-width: 450px;
+  height: 294px;
+}
+
+.description-foto {
+  padding: 20px 25px;
+  max-width: 100%;
+}
+
+.work-examples-img {
+  object-fit: cover;
+  max-width: 100%;
+  height: 100%;
+}
+
+.work-examples-item {
+  max-width: 450px;
 }
 
 .backdrop.is-hidden {
