--- a/sass/layout/_work-examples.scss
+++ b/sass/layout/_work-examples.scss
@@ -13,35 +13,32 @@
   color: $text-main-color;
 }
 
-.description-foto {
-  padding: 20px 25px;
+.tehnocrack-text {
+  font-family: $text-font;
+  margin: 0;
+  @include font($fs: 18px);
+
+  line-height: 1.556;
+  color: $white-color;
+  padding: 77px 24px;
 }
 
-.work-examples-item {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: 30px;
-  margin-bottom: 30px;
-  width: calc((100% - 60px) / 3);
-  outline: 1px solid $border-work-examples;
+.tehnocrack {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: $card-background;
 
-  &:nth-child(3n) {
-    margin-right: 0px;
+  overflow: auto;
+  transition: transform $time $function-time;
+  transform: translateY(100%);
+
+  .work-examples-link:hover &,
+  .work-examples-link:focus & {
+    transform: translateY(0);
   }
-
-  &:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-  }
-}
-
-.work-examples-img {
-  width: 370px;
-  height: 294px;
-}
-
-.work-examples-list {
-  display: flex;
-  flex-wrap: wrap;
 }
 
 .work-examples-link {
@@ -53,36 +50,54 @@
   }
 }
 
+.work-examples-item:not(:last-child) {
+  margin-bottom: 30px;
+
+  & {
+    outline: 1px solid $border-work-examples;
+  }
+}
+
 .tehnocrack-card {
   position: relative;
   overflow: hidden;
+  max-width: 450px;
+  height: 294px;
 }
 
-.tehnocrack-text {
-  font-family: $text-font;
-  margin: 0;
-  @include font($fs: 18px);
-
-  line-height: 1.556;
-  color: $white-color;
-  padding: 63px 24px;
+.description-foto {
+  padding: 20px 25px;
+  max-width: 100%;
 }
 
-.tehnocrack {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
+.work-examples-img {
+  object-fit: cover;
+  max-width: 100%;
   height: 100%;
-  background-color: $card-background;
-  // opacity: 0;
-  overflow: auto;
-  transition: transform $time $function-time;
-  transform: translateY(100%);
-
-  .work-examples-link:hover &,
-  .work-examples-link:focus & {
-    transform: translateY(0);
-    // opacity: 1;
-  }
 }
+
+.work-examples-item {
+  max-width: 450px;
+}
+
+// .work-examples-item {
+//   display: flex;
+//   flex-wrap: wrap;
+//   margin-right: 30px;
+//   margin-bottom: 30px;
+//   width: calc((100% - 60px) / 3);
+//   outline: 1px solid $border-work-examples;
+
+//   &:nth-child(3n) {
+//     margin-right: 0px;
+//   }
+
+//   &:nth-last-child(-n + 3) {
+//     margin-bottom: 0;
+//   }
+// }
+
+// .work-examples-list {
+//   display: flex;
+//   flex-wrap: wrap;
+// }
