--- a/css/main.css
+++ b/css/main.css
@@ -66,8 +66,8 @@ body {
 
 @media screen and (min-width: 480px) {
   .container {
-    width: 480px;
     margin: 0 auto;
+    width: 480px;
   }
 }
 
@@ -293,6 +293,7 @@ body {
     font-weight: 700;
     letter-spacing: 0.03em;
     line-height: 1.192;
+    margin-right: 95px;
   }
 }
 
@@ -375,119 +376,151 @@ body {
   }
 }
 
-.site-nav-link {
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.143;
-  color: #212121;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.site-nav {
+  display: none;
 }
 
-.site-nav-link:hover, .site-nav-link:focus {
+.main-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.burger-btn {
+  display: flex;
+  align-items: center;
+}
+
+.burger-btn,
+.mobile-menu-close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.burger-btn:hover, .burger-btn:focus,
+.mobile-menu-close-btn:hover,
+.mobile-menu-close-btn:focus {
   color: #2196f3;
+}
+
+.mobile-menu-close-btn,
+.burger-icon {
+  width: 40px;
+  height: 40px;
+}
+
+.mobile-menu-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
+}
+
+.mobile-menu-close-icon {
+  width: 19px;
+  height: 19px;
+  vertical-align: middle;
+  fill: currentColor;
+}
+
+.burger-icon {
+  width: 24px;
+  height: 16px;
+  vertical-align: middle;
+  fill: currentColor;
+}
+
+.mobile-menu-flex {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mobile-menu {
+  position: absolute;
+  max-width: 480px;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-100%);
+  background-color: #ffffff;
+  padding: 48px 40px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(-50%) translateY(0%);
+}
+
+.mobile-menu-nav-link {
+  font-size: 40px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.175;
+  color: #212121;
+}
+
+.mobile-menu-nav-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.mobile-contacts-list:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-contacts-tel-link {
+  font-size: 34px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.176;
+  color: #2196f3;
+}
+
+.mobile-contacts-link {
+  font-size: 24px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.167;
+  color: #757575;
+}
+
+.mobile-social {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mobile-social-link {
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  line-height: 1.222;
+  color: #2196f3;
+  padding: 0 10px;
+}
+
+.mobile-social-list:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.padding-left {
+  padding-left: 0px;
+}
+
+@media screen and (max-width: 767px) {
+  .header-main {
+    padding: 16px 0;
+  }
 }
 
 .studio-blue {
   color: #2196f3;
 }
 
-.portfolio-blue {
-  color: #2196f3;
-}
-
-.header-main .container {
-  display: flex;
-  align-items: center;
-}
-
-.navigation {
-  display: flex;
-  align-items: center;
-}
-
-.site-nav {
-  display: flex;
-  align-items: center;
-}
-
-.strip::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  content: "";
-  width: 100%;
-  height: 4px;
-  background: #2196f3;
-  border-radius: 2px;
-  animation-name: underline;
-  animation-duration: 250ms;
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  /* animation-fill-mode: forwards; */
-  /* transform-origin: center; */
-}
-
-@keyframes underline {
-  0% {
-    /* transform: scaleX(0); */
-    transform: rotate(0deg);
-    opacity: 0;
-  }
-  100% {
-    /* transform: scaleX(1); */
-    transform: rotate(180deg);
-    opacity: 1;
-  }
-}
-
-.site-nav-list {
-  position: relative;
-}
-
-.site-nav-list:not(:last-child) {
-  margin-right: 50px;
-}
-
-.site-nav-link {
-  display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-.contacts-link {
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 0.02em;
-  line-height: 1.143;
-  color: #757575;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  display: flex;
-  align-items: center;
-  fill: currentColor;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contacts-link:hover, .contacts-link:focus {
-  color: #2196f3;
-}
-
-.contacts-list:not(:last-child) {
-  margin-right: 50px;
-}
-
 .contacts {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-}
-
-.contacts-icon {
-  margin-right: 10px;
-  background-size: contain;
-  background-position: center;
-  background-repeat: no-repeat;
-  object-position: center;
+  display: none;
 }
 
 .hero-title {
@@ -1136,34 +1169,85 @@ body {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.work-examples-item:not(:last-child) {
-  margin-bottom: 30px;
-}
-
-.work-examples-item:not(:last-child) {
-  outline: 1px solid #eeeeee;
+@media screen and (max-width: 767px) {
+  .work-examples-item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .tehnocrack-card {
   position: relative;
   overflow: hidden;
-  max-width: 450px;
   height: 294px;
 }
 
 .description-foto {
   padding: 20px 25px;
-  max-width: 100%;
 }
 
 .work-examples-img {
   object-fit: cover;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
 }
 
 .work-examples-item {
   max-width: 450px;
+  outline: 1px solid #eeeeee;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .work-examples-item {
+    min-width: 354px;
+    width: 100%;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 60px) / 2);
+  }
+  .work-examples-item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .work-examples-item:last-child {
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) and (min-width: 768px) {
+  .work-examples-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .tehnocrack-text {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work-examples-item {
+    max-width: 370px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 60px) / 3);
+  }
+  .work-examples-item:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .work-examples-item:nth-last-child(-n + 3) {
+    margin-bottom: 0;
+  }
+  .work-examples-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .tehnocrack-text {
+    padding: 63px 24px;
+  }
 }
 
 .backdrop.is-hidden {
