--- a/sass/layout/_work-examples.scss
+++ b/sass/layout/_work-examples.scss
@@ -16,6 +16,7 @@
 .tehnocrack-text {
   font-family: $text-font;
   margin: 0;
+
   @include font($fs: 18px);
 
   line-height: 1.556;
@@ -50,54 +51,88 @@
   }
 }
 
-.work-examples-item:not(:last-child) {
-  margin-bottom: 30px;
-
-  & {
-    outline: 1px solid $border-work-examples;
+@media screen and (max-width: 767px) {
+  .work-examples-item:not(:last-child) {
+    margin-bottom: 30px;
   }
 }
 
 .tehnocrack-card {
   position: relative;
   overflow: hidden;
-  max-width: 450px;
+  // max-width: 450px;
   height: 294px;
 }
 
 .description-foto {
   padding: 20px 25px;
-  max-width: 100%;
+  // width: 100%;
 }
 
 .work-examples-img {
   object-fit: cover;
-  max-width: 100%;
+  width: 100%;
   height: 100%;
 }
 
 .work-examples-item {
   max-width: 450px;
+  outline: 1px solid $border-work-examples;
 }
 
-// .work-examples-item {
-//   display: flex;
-//   flex-wrap: wrap;
-//   margin-right: 30px;
-//   margin-bottom: 30px;
-//   width: calc((100% - 60px) / 3);
-//   outline: 1px solid $border-work-examples;
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .work-examples-item {
+    min-width: 354px;
+    width: 100%;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 60px) / 2);
 
-//   &:nth-child(3n) {
-//     margin-right: 0px;
-//   }
+    &:nth-child(2n) {
+      margin-right: 0px;
+    }
 
-//   &:nth-last-child(-n + 3) {
-//     margin-bottom: 0;
-//   }
-// }
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 
-// .work-examples-list {
-//   display: flex;
-//   flex-wrap: wrap;
-// }
+  @media screen and (min-width: 768px) {
+    .work-examples-list {
+      display: flex;
+      flex-wrap: wrap;
+    }
+  }
+
+  .tehnocrack-text {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .work-examples-item {
+    max-width: 370px;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: 30px;
+    margin-bottom: 30px;
+    width: calc((100% - 60px) / 3);
+
+    &:nth-child(3n) {
+      margin-right: 0px;
+    }
+
+    &:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+  }
+  .work-examples-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .tehnocrack-text {
+    padding: 63px 24px;
+  }
+}
