--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -14,11 +14,17 @@
   color: $accent-color;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .logo-main {
     @include font($fs: 26px, $fw: 700);
 
     line-height: 1.192;
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-main {
     margin-right: 95px;
   }
 }
