--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ body {
 .container {
   width: 100%;
   padding: 0 15px;
-  outline: 1px solid red;
 }
 
 @media screen and (min-width: 480px) {
@@ -287,12 +286,18 @@ body {
   color: #2196f3;
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .logo-main {
     font-size: 26px;
     font-weight: 700;
     letter-spacing: 0.03em;
     line-height: 1.192;
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .logo-main {
     margin-right: 95px;
   }
 }
@@ -376,10 +381,6 @@ body {
   }
 }
 
-.site-nav {
-  display: none;
-}
-
 .main-nav {
   display: flex;
   justify-content: space-between;
@@ -439,8 +440,8 @@ body {
 }
 
 .mobile-menu {
-  position: absolute;
-  max-width: 480px;
+  position: fixed;
+  width: 100vh;
   width: 100%;
   height: 100vh;
   top: 0;
@@ -448,10 +449,12 @@ body {
   transform: translateX(-50%) translateY(-100%);
   background-color: #ffffff;
   padding: 48px 40px;
+  z-index: 200;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-menu.is-open {
+  border-bottom: 1px solid #ececec;
   transform: translateX(-50%) translateY(0%);
 }
 
@@ -513,14 +516,163 @@ body {
   .header-main {
     padding: 16px 0;
   }
+  .site-nav {
+    display: none;
+  }
 }
 
 .studio-blue {
   color: #2196f3;
 }
 
-.contacts {
-  display: none;
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+  .site-nav-link {
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    line-height: 1.143;
+    color: #212121;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .site-nav-link:hover, .site-nav-link:focus {
+    color: #2196f3;
+  }
+  .portfolio-blue {
+    color: #2196f3;
+  }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
+  .site-nav {
+    display: flex;
+    align-items: center;
+  }
+  .site-nav-link {
+    display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .strip::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
+    width: 100%;
+    height: 4px;
+    background: #2196f3;
+    border-radius: 2px;
+    animation-name: underline;
+    animation-duration: 250ms;
+    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    /* animation-fill-mode: forwards; */
+    /* transform-origin: center; */
+  }
+  @keyframes underline {
+    0% {
+      /* transform: scaleX(0); */
+      transform: rotate(0deg);
+      opacity: 0;
+    }
+    100% {
+      /* transform: scaleX(1); */
+      transform: rotate(180deg);
+      opacity: 1;
+    }
+  }
+  .site-nav-list {
+    position: relative;
+  }
+  .site-nav-list:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .contacts {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-link {
+    font-size: 12px;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    line-height: 1.167;
+    color: #757575;
+    display: flex;
+    align-items: center;
+    fill: currentColor;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .contacts-link:hover, .contacts-link:focus {
+    color: #2196f3;
+  }
+  .contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
+  .contacts-icon {
+    margin-right: 8px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-position: center;
+  }
+  .mail-icon {
+    width: 14px;
+    height: 10px;
+  }
+  .tel-icon {
+    width: 10px;
+    height: 14px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .contacts-list:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-link {
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0.02em;
+    line-height: 1.143;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+  .contacts-list:not(:last-child) {
+    margin-right: 30px;
+  }
+  .contacts-icon {
+    margin-right: 10px;
+  }
+  .contacts {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: auto;
+  }
+  .mail-icon {
+    width: 16px;
+    height: 12px;
+  }
+  .tel-icon {
+    width: 12px;
+    height: 16px;
+  }
 }
 
 .hero-title {
@@ -1272,14 +1424,17 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  max-width: 450px;
+  width: 100vw;
+  max-height: 609px;
+  height: 95%;
   padding: 40px;
   margin-right: auto;
   margin-left: auto;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+  overflow-y: scroll;
 }
 
 .modal-title {
@@ -1290,6 +1445,12 @@ body {
   color: #212121;
   margin-top: 0;
   margin-bottom: 12px;
+}
+
+@media screen and (max-width: 1199px) {
+  .modal-title {
+    text-align: center;
+  }
 }
 
 .form-field {
@@ -1382,19 +1543,20 @@ body {
   appearance: none;
 }
 
-.agree-checkbox {
-  padding-left: 8px;
+.check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .check::before {
-  position: absolute;
-  top: 50%;
-  left: 8px;
-  transform: translateY(-50%);
   content: "";
-  display: inline-block;
   width: 16px;
   height: 15px;
+  margin-right: 8px;
+  cursor: pointer;
   background-image: url(../img/modal/checkbox-icomoon.svg);
   border: 2px solid #212121;
   border-radius: 2px;
@@ -1416,33 +1578,49 @@ body {
   background-size: contain;
   background-position: center;
   background-origin: border-box;
-  /* border-radius: 2px; */
 }
 
 .check-text {
   color: #2196f3;
 }
 
-.agree-checkbox {
-  position: relative;
+.check-input {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 16px;
+  vertical-align: baseline;
+  width: 100%;
+}
+
+.agree-checkbox {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
   margin-top: 20px;
   margin-bottom: 30px;
 }
 
-.agree-checkbox input {
-  margin-right: 8px;
-}
-
 .agree-checkbox label {
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 400;
   letter-spacing: 0.03em;
-  line-height: 1.714;
+  line-height: 1.167;
   text-align: center;
   color: #757575;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+    max-height: 581px;
+  }
+  .agree-checkbox label {
+    font-size: 14px;
+    font-weight: 400;
+    letter-spacing: 0.03em;
+    line-height: 1.714;
+    text-align: center;
+    color: #757575;
+  }
 }
 /*# sourceMappingURL=main.css.map */
