--- a/sass/layout/_contacts.scss
+++ b/sass/layout/_contacts.scss
@@ -1,41 +1,91 @@
-.contacts {
-  display: none;
+@media screen and (max-width: 767px) {
+  .contacts {
+    display: none;
+  }
 }
 
-// .contacts-link {
-//   @include font($fw: 500, $ls: 0.02em);
+@media screen and (min-width: 768px) {
+  .contacts-link {
+    @include font($fs: 12px, $fw: 500, $ls: 0.02em);
 
-//   line-height: 1.143;
-//   color: $text-main-color;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   display: flex;
-//   align-items: center;
-//   fill: currentColor;
-//   transition: color $time $function-time;
+    line-height: 1.167;
+    color: $text-main-color;
+    display: flex;
+    align-items: center;
+    fill: currentColor;
+    transition: color $time $function-time;
 
-//   &:hover,
-//   &:focus {
-//     color: $accent-color;
-//   }
-// }
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+  }
 
-// .contacts-list {
-//   &:not(:last-child) {
-//     margin-right: 50px;
-//   }
-// }
+  .contacts {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+  }
 
-// .contacts {
-//   display: flex;
-//   align-items: center;
-//   margin-left: auto;
-// }
+  .contacts-icon {
+    margin-right: 8px;
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    object-position: center;
+  }
 
-// .contacts-icon {
-//   margin-right: 10px;
-//   background-size: contain;
-//   background-position: center;
-//   background-repeat: no-repeat;
-//   object-position: center;
-// }
+  .mail-icon {
+    width: 14px;
+    height: 10px;
+  }
+
+  .tel-icon {
+    width: 10px;
+    height: 14px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .contacts-list {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contacts-link {
+    @include font($fw: 500, $ls: 0.02em);
+
+    line-height: 1.143;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
+
+  .contacts-list:not(:last-child) {
+    margin-right: 30px;
+  }
+
+  .contacts-icon {
+    margin-right: 10px;
+  }
+
+  .contacts {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+    margin-left: auto;
+  }
+
+  .mail-icon {
+    width: 16px;
+    height: 12px;
+  }
+
+  .tel-icon {
+    width: 12px;
+    height: 16px;
+  }
+}
