--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -22,8 +22,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: 528px;
-  height: 581px;
+  max-width: 450px;
+  width: 100vw;
+  max-height: 609px;
+  height: 95%;
   padding: 40px;
   margin-right: auto;
   margin-left: auto;
@@ -31,6 +33,7 @@
   background-color: $white-color;
   box-shadow: $modal-box-shadow;
   border-radius: 4px;
+  overflow-y: scroll;
 }
 
 .modal-title {
@@ -40,6 +43,12 @@
   color: $text-head-color;
   margin-top: 0;
   margin-bottom: 12px;
+}
+
+@media screen and (max-width: 1199px) {
+  .modal-title {
+    text-align: center;
+  }
 }
 
 .form-field {
@@ -135,20 +144,21 @@
   appearance: none;
 }
 
-.agree-checkbox {
-  padding-left: 8px;
+.check {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
 }
 
 .check::before {
-  position: absolute;
-  top: 50%;
-  left: 8px;
-  transform: translateY(-50%);
   content: "";
-  display: inline-block;
+  // display: inline-block;
   width: 16px;
   height: 15px;
-
+  margin-right: 8px;
+  cursor: pointer;
   background-image: url(../img/modal/checkbox-icomoon.svg);
   border: 2px solid $text-head-color;
   border-radius: 2px;
@@ -170,7 +180,6 @@
     background-size: contain;
     background-position: center;
     background-origin: border-box;
-    /* border-radius: 2px; */
   }
 }
 
@@ -178,24 +187,42 @@
   color: $accent-color;
 }
 
-.agree-checkbox {
-  position: relative;
+.check-input {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding-left: 16px;
+  vertical-align: baseline;
+  width: 100%;
+}
+
+.agree-checkbox {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+
   margin-top: 20px;
   margin-bottom: 30px;
 }
 
-.agree-checkbox input {
-  margin-right: 8px;
-}
-
 .agree-checkbox label {
-  @include font();
+  @include font($fs: 12px);
 
-  line-height: 1.714;
+  line-height: 1.167;
   text-align: center;
   color: $text-main-color;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    max-width: 528px;
+    max-height: 581px;
+  }
+
+  .agree-checkbox label {
+    @include font();
+
+    line-height: 1.714;
+    text-align: center;
+    color: $text-main-color;
+  }
 }
