--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -1,7 +1,3 @@
-.site-nav {
-  display: none;
-}
-
 // MOBILE MENU
 
 .main-nav {
@@ -63,8 +59,8 @@
 }
 
 .mobile-menu {
-  position: absolute;
-  max-width: 480px;
+  position: fixed;
+  width: 100vh;
   width: 100%;
   height: 100vh;
   top: 0;
@@ -72,11 +68,13 @@
   transform: translateX(-50%) translateY(-100%);
   background-color: $white-color;
   padding: 48px 40px;
+  z-index: 200;
 
   transition: transform $time $function-time;
 }
 
 .mobile-menu.is-open {
+  border-bottom: 1px solid $portfolio-border;
   transform: translateX(-50%) translateY(0%);
 }
 
@@ -137,87 +135,96 @@
   .header-main {
     padding: 16px 0;
   }
+
+  .site-nav {
+    display: none;
+  }
 }
 
 .studio-blue {
   color: $accent-color;
 }
 
-// .site-nav-link {
-//   @include font($fw: 500, $ls: 0.02em);
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
 
-//   line-height: 1.143;
-//   color: $text-head-color;
+  .mobile-menu {
+    display: none;
+  }
 
-//   transition: color $time $function-time;
+  .site-nav-link {
+    @include font($fw: 500, $ls: 0.02em);
 
-//   &:hover,
-//   &:focus {
-//     color: $accent-color;
-//   }
-// }
+    line-height: 1.143;
+    color: $text-head-color;
 
-// .portfolio-blue {
-//   color: $accent-color;
-// }
+    transition: color $time $function-time;
 
-// .header-main .container {
-//   display: flex;
-//   align-items: center;
-// }
+    &:hover,
+    &:focus {
+      color: $accent-color;
+    }
+  }
 
-// .navigation {
-//   display: flex;
-//   align-items: center;
-// }
+  .portfolio-blue {
+    color: $accent-color;
+  }
 
-// .site-nav {
-//   display: flex;
-//   align-items: center;
-// }
+  .navigation {
+    display: flex;
+    align-items: center;
+  }
 
-// .strip::after {
-//   position: absolute;
-//   left: 0;
-//   bottom: 0;
-//   content: "";
+  .site-nav {
+    display: flex;
+    align-items: center;
+  }
 
-//   width: 100%;
-//   height: 4px;
-//   background: $accent-color;
-//   border-radius: 2px;
+  .site-nav-link {
+    display: flex;
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 
-//   animation-name: underline;
-//   animation-duration: $time;
-//   animation-timing-function: $function-time;
-//   /* animation-fill-mode: forwards; */
-//   /* transform-origin: center; */
-// }
+  .strip::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
 
-// @keyframes underline {
-//   0% {
-//     /* transform: scaleX(0); */
-//     transform: rotate(0deg);
-//     opacity: 0;
-//   }
+    width: 100%;
+    height: 4px;
+    background: $accent-color;
+    border-radius: 2px;
 
-//   100% {
-//     /* transform: scaleX(1); */
-//     transform: rotate(180deg);
-//     opacity: 1;
-//   }
-// }
+    animation-name: underline;
+    animation-duration: $time;
+    animation-timing-function: $function-time;
+    /* animation-fill-mode: forwards; */
+    /* transform-origin: center; */
+  }
 
-// .site-nav-list {
-//   position: relative;
+  @keyframes underline {
+    0% {
+      /* transform: scaleX(0); */
+      transform: rotate(0deg);
+      opacity: 0;
+    }
 
-//   &:not(:last-child) {
-//     margin-right: 50px;
-//   }
-// }
+    100% {
+      /* transform: scaleX(1); */
+      transform: rotate(180deg);
+      opacity: 1;
+    }
+  }
 
-// .site-nav-link {
-//   display: flex;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-// }
+  .site-nav-list {
+    position: relative;
+
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
+}
