--- a/css/main.css
+++ b/css/main.css
@@ -1613,7 +1613,7 @@ body {
   .modal {
     min-width: 528px;
     width: 100%;
-    min-height: 581px;
+    max-height: 581px;
     height: 100%;
     overflow: auto;
   }
