--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -39,17 +39,18 @@
 .modal-title {
   @include font($fs: 20px, $fw: 700);
 
+  text-align: center;
   line-height: 1.15;
   color: $text-head-color;
   margin-top: 0;
   margin-bottom: 12px;
 }
 
-@media screen and (max-width: 1199px) {
-  .modal-title {
-    text-align: center;
-  }
-}
+// @media screen and (max-width: 1199px) {
+//   .modal-title {
+//     text-align: center;
+//   }
+// }
 
 .form-field {
   display: flex;
@@ -215,11 +216,12 @@
 @media screen and (min-width: 1200px) {
   .modal {
     min-width: 528px;
+    max-width: 528px;
     width: 100%;
     max-height: 581px;
     height: 100%;
 
-    overflow: auto;
+    overflow: visible;
   }
 
   .agree-checkbox label {
