--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -37,7 +37,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 481px) {
   .hero {
     max-width: 768px;
     background-image: linear-gradient(
@@ -45,10 +45,6 @@
         rgba(47, 48, 58, 0.4)
       ),
       url("../img/hero/hero-bcg-tab.jpg");
-  }
-
-  .hero-title {
-    padding: 0 186px;
   }
 
   @media screen and (min-devise-pixel-ratio: 2),
@@ -64,25 +60,24 @@
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 768px;
+  }
+
+  .hero-title {
+    padding: 0 186px;
+  }
+}
+
+@media screen and (min-width: 769px) {
   .hero {
     max-width: 1600px;
-    padding: 200px 0;
     background-image: linear-gradient(
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url("../img/hero/hero-background.jpg");
-  }
-
-  .hero-title {
-    padding: 0 266px;
-  }
-
-  .hero-title {
-    @include font($fs: 44px, $fw: 900, $ls: 0.06em);
-
-    line-height: 1.364;
   }
 
   @media screen and (min-devise-pixel-ratio: 2),
@@ -95,5 +90,21 @@
         ),
         url("../img/hero/hero-background@2x.jpg");
     }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding: 200px 0;
+  }
+
+  .hero-title {
+    padding: 0 266px;
+  }
+
+  .hero-title {
+    @include font($fs: 44px, $fw: 900, $ls: 0.06em);
+
+    line-height: 1.364;
   }
 }
