--- a/sass/layout/_work-examples.scss
+++ b/sass/layout/_work-examples.scss
@@ -43,6 +43,10 @@
 }
 
 .work-examples-link {
+  // display: inline-block;
+  // width: 100%;
+  // height: 100%;
+
   transition: box-shadow $time $function-time;
 
   &:hover,
@@ -60,13 +64,11 @@
 .tehnocrack-card {
   position: relative;
   overflow: hidden;
-  // max-width: 450px;
-  height: 294px;
+  // height: 294px;
 }
 
 .description-foto {
   padding: 20px 25px;
-  // width: 100%;
 }
 
 .work-examples-img {
